--- a/styles.css
+++ b/styles.css
@@ -406,6 +406,7 @@ footer {
   justify-content: center;
   position: relative;
   width: 55rem;
+  height: 20rem;
 }
 
 .Project-info h2,
@@ -420,7 +421,8 @@ footer {
 .h2-portfolio {
   display: flex;
   align-items: center;
-  height: 20rem;
+  width: 100vw;
+  height: auto;
 }
 
 .Project-info a {
@@ -432,23 +434,22 @@ footer {
 
 @media (max-width: 860px) {
   .project {
-    display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 100vw;
-    height: 85vh;
-    margin-top: 5rem;
+    margin-top: 3rem;
+    height: 30rem;
   }
 
   .Project-info {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     position: relative;
+    margin-top: 5rem;
     width: 100vw;
-    height: 10vh;
+    height: 20vh;
   }
 
   .Project-info h2,
@@ -476,5 +477,38 @@ footer {
   .project-img,
   .project-video {
     margin-top: 3rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .project {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    margin-top: 0;
+    width: 25rem;
+    height: auto;
+  }
+
+  .project img,
+  .project video {
+    width: 80%;
+    height: auto;
+  }
+
+  .Project-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    position: relative;
+    height: 10rem;
+  }
+
+  .Github,
+  .linkedin {
+    width: 40px;
+    height: 40px;
   }
 }
