--- a/styles.css
+++ b/styles.css
@@ -418,7 +418,7 @@ footer {
 .Project-info p {
   text-align: left;
   width: 20vw;
-  font-size: 20px;
+  font-size: 18px;
   text-decoration: none;
   list-style: none;
 }
@@ -510,8 +510,13 @@ footer {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    margin-top: 3rem;
-    height: 30rem;
+    margin-top: 5rem;
+    height: 36rem;
+  }
+
+  .CS-Museum-Project,
+  .Film-Site-Project {
+    margin-top: 10rem;
   }
 
   .Project-info {
@@ -521,8 +526,9 @@ footer {
     justify-content: start;
     position: relative;
     margin-top: 5rem;
-    width: 100vw;
-    height: 20vh;
+    padding-bottom: 10rem;
+    width: 30vw;
+    height: 30vh;
   }
 
   .Project-info h2,
@@ -532,7 +538,7 @@ footer {
     font-size: 20px;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 20rem;
   }
 
   .project-paragraph {
@@ -558,7 +564,7 @@ footer {
   }
 
   footer {
-    padding-top: 8rem;
+    padding-top: 15rem;
   }
 }
 
@@ -612,6 +618,10 @@ footer {
   .h1-box {
     padding-top: 2rem;
     padding-bottom: 0;
+  }
+
+  footer {
+    padding-top: 18rem;
   }
 }
 
@@ -753,7 +763,12 @@ footer {
     justify-content: space-between;
     align-items: center;
     margin-top: 5rem;
-    height: 23rem;
+    height: 22rem;
+  }
+
+  .CS-Museum-Project,
+  .Film-Site-Project {
+    margin-top: 18rem;
   }
 
   .Project-info {
@@ -811,6 +826,6 @@ footer {
   }
 
   footer {
-    padding-top: 5rem;
+    padding-top: 18rem;
   }
 }
