--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,12 @@ ul li {
   font-family: "Montserrat", sans-serif;
 }
 
+.h2-strengths,
+.h2-motivation {
+  color: white;
+  text-shadow: 5px white;
+}
+
 .buttons-container button,
 ul li {
   font-size: 18px;
@@ -326,19 +332,32 @@ footer {
 }
 
 .motivation-box {
+  background-image: url("./Images/Motivation-bg.jpg");
+  background-size: cover;
+  background-position: center;
   padding-top: 2rem;
   height: 55vh;
+}
+
+.strengths-box {
+  background-image: url("./Images/Strengths-bg-img.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 .Tech-Skills-box {
   display: flex;
   height: 20rem;
   background: white;
+  background-image: url("./Images/technology-bg.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 .tech-img {
   width: 80px;
   height: 80px;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .Status-box {
