--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@ ul li {
   text-shadow: 5px white;
 }
 
+.status-p {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
 .buttons-container button,
 ul li {
   font-size: 18px;
@@ -375,6 +379,10 @@ footer {
     rgba(253, 187, 45, 1) 75%
   );
   padding-top: 2rem;
+
+  background-image: url("./Images/status-bg-img.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 #self-motivated {
