--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,10 @@ ul li {
   background-color: rgba(255, 255, 255, 0.8);
 }
 
+.tech-used {
+  padding-top: 1rem;
+}
+
 .buttons-container button,
 ul li {
   font-size: 18px;
