--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,12 @@ ul li {
   color: white;
   text-shadow: 5px white;
   text-align: center;
+  font-size: 30px;
 }
 
 .status-p {
   background-color: rgba(255, 255, 255, 0.8);
+  font-size: 20px;
 }
 
 .tech-used {
@@ -330,7 +332,7 @@ footer {
   justify-content: center;
   align-items: center;
   width: 80vw;
-  height: 50vh;
+  height: 100vh;
   border: 2px solid black;
   position: absolute;
   z-index: 1;
@@ -351,7 +353,6 @@ footer {
   background-size: cover;
   background-position: center;
   padding-top: 2rem;
-  height: 55vh;
 }
 
 .strengths-box {
@@ -603,6 +604,11 @@ footer {
 
   footer {
     padding-top: 15rem;
+  }
+
+  .h2-strengths,
+  .h2-motivation {
+    font-size: 20px;
   }
 }
 
